--- a/facade-pattern/pom.xml
+++ b/facade-pattern/pom.xml
@@ -7,12 +7,20 @@
     <groupId>com.contrastofbeauty.designpatterns</groupId>
     <version>1.0-SNAPSHOT</version>
   </parent>
-  <groupId>com.contrastofbeauty.designpatterns.decorator</groupId>
-  <artifactId>decorator-pattern</artifactId>
+  <groupId>com.contrastofbeauty.designpatterns.facade</groupId>
+  <artifactId>facade-pattern</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <name>decorator-pattern</name>
+  <name>facade-pattern</name>
   <url>http://maven.apache.org</url>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
+  <dependencies>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>3.8.1</version>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
 </project>
